<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Registration">

    <!-- Registration progress -->
    <ProgressBar
        android:id="@+id/registration_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- First Name Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_firstName_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing"
                app:counterEnabled="true"
                app:counterMaxLength="30">
                <!-- First Name EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/registration_first_name"
                    android:hint="@string/registration_first_name"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textCapWords"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!-- Last Name Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lastName_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing"
                app:counterEnabled="true"
                app:counterMaxLength="30">
                <!-- Last Name EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/registration_last_name"
                    android:hint="@string/registration_last_name"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textCapWords"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!-- Birth Date Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_BirthDate_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing">
                <!-- Birth Date EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_BirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/registration_birth_date"
                    android:hint="@string/registration_birth_date"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="none"
                    android:focusable="false"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!-- Email Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_Email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing">
                <!-- Email EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/registration_email"
                    android:hint="@string/registration_email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!-- Password Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_Password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing"
                app:counterEnabled="true"
                app:counterMaxLength="30">
                <!-- Password EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/registration_password"
                    android:hint="@string/registration_password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!-- Confirm Password Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_Confirm_Password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing"
                app:counterEnabled="true"
                app:counterMaxLength="30">
                <!-- Confirm Password EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_Confirm_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/registration_confirm_password"
                    android:hint="@string/registration_confirm_password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- SignUp Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_SignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_spacing"
                android:layout_marginBottom="@dimen/margin_spacing"
                android:padding="@dimen/button_padding"
                android:text="@string/registration_button" />

            <!-- Login Link -->
            <TextView
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_spacing"
                android:gravity="center"
                android:text="@string/registration_login_link"
                android:textColor="@color/blue"
                android:textSize="@dimen/link_size" />
        </LinearLayout>
    </ScrollView>

    <!-- Result Layout -->
    <LinearLayout
        android:id="@+id/messageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">
        <!-- Result Message -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration_result"
            android:textColor="@color/black"
            android:textSize="@dimen/result_size" />
    </LinearLayout>

</LinearLayout>