<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Email Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_Email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing">
                <!-- Email EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_email"
                    android:hint="@string/prompt_email"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Container -->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_Password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing"
                app:counterEnabled="true"
                app:counterMaxLength="30">
                <!-- Password EditText -->
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_password"
                    android:hint="@string/prompt_password"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
            <!-- Remember Me Container -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing"
                android:layout_marginBottom="@dimen/spacing">
                <!-- Remember Me Checkbox -->
                <CheckBox
                    android:id="@+id/login_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/prompt_remember_me" />
            </android.support.design.widget.TextInputLayout>

            <!-- Login Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_spacing"
                android:layout_marginBottom="@dimen/margin_spacing"
                android:padding="@dimen/button_padding"
                android:text="@string/action_sign_in" />
            <!-- New Account Link -->
            <TextView
                android:id="@+id/new_account_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin_spacing"
                android:text="@string/new_account"
                android:textColor="@color/blue"
                android:textSize="@dimen/link_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>